@@ -1,3 +1,7 @@
+2003-09-10  Jonathan Graehl  <graehl@isi.edu>
+
+	* src/compose.cc: fixed bug when -i and -m used together (referencing state names array when -i doesn't name states)
+
 2003-09-08  Jonathan Graehl  <graehl@isi.edu>
 
 	* src/finite.cc: changed default to named-states and made -K
